# jar-obfuscator

./: .gitignore  CHANGELOG.MD  Dockerfile  LICENSE  README.md  docker-build.sh  pom.xml  settings.xml
.github/workflows/: build.yml  leak.yml  maven.yml  test-all.yml  test-char.yml  test-junk.yml  test-simple.yml  test-string.yml  test.yml
doc/: README-advance.md  README-example.md  README-result.md
github/delete-builds/: main.go
github/delete-caches/: main.go
github/delete-runs/: main.go
jrandom/: CMakeLists.txt  build.sh  jni_jrandom.c  jni_jrandom.h  jrandom_linux.asm  jrandom_windows.asm
native/: CMakeLists.txt  CMakeLists_for_decrypt_win32_x86.txt  core_de.h  core_en.h  decrypt_linux.asm  decrypt_macos.asm  decrypt_test.c  decrypt_windows.asm  decrypt_windows_x86.asm  encrypt_linux.asm  encrypt_macos.asm  encrypt_windows.asm  jni_encryptor.c  jni_encryptor.h  main.py  start_linux.c  start_macos.c  start_windows.c  xxtea.c  xxtea_common.c  xxtea_common.h  xxtea_de.h  xxtea_en.h  xxtea_test.c
release/: README.md
src/main/java/me/n1ar4/jar/obfuscator/: Const.java  Logo.java  Main.java
src/main/java/me/n1ar4/jar/obfuscator/analyze/: DiscoveryClassVisitor.java  DiscoveryMethodAdapter.java  MethodCallClassVisitor.java  MethodCallMethodVisitor.java
src/main/java/me/n1ar4/jar/obfuscator/asm/: AnnotationRemapVisitor.java  ClassNameChanger.java  ClassNameVisitor.java  CompileInfoChanger.java  CompileInfoVisitor.java  FieldNameChanger.java  FieldNameVisitor.java  IntToXorChanger.java  IntToXorVisitor.java  JunkCodeChanger.java  JunkCodeVisitor.java  MainMethodChecker.java  MainMethodVisitor.java  MethodNameChanger.java  MethodNameVisitor.java  ParameterChanger.java  ParameterVisitor.java  ReflectionChanger.java  StringArrayChanger.java  StringArrayVisitor.java  StringChanger.java  StringVisitor.java
src/main/java/me/n1ar4/jar/obfuscator/base/: ClassField.java  ClassFileEntity.java  ClassReference.java  MethodReference.java
src/main/java/me/n1ar4/jar/obfuscator/config/: BaseCmd.java  BaseConfig.java  Manager.java  Parser.java
src/main/java/me/n1ar4/jar/obfuscator/core/: AnalyzeEnv.java  BuiltinFilter.java  DiscoveryRunner.java  MethodCallRunner.java  ObfEnv.java  ObfHashMap.java  Runner.java
src/main/java/me/n1ar4/jar/obfuscator/gui/: MainForm.form  MainForm.java
src/main/java/me/n1ar4/jar/obfuscator/jvmti/: CodeEncryptor.java  Constants.java  ExportCommand.java  PatchCommand.java  PatchHelper.java
src/main/java/me/n1ar4/jar/obfuscator/loader/: CustomClassLoader.java  CustomClassWriter.java
src/main/java/me/n1ar4/jar/obfuscator/templates/: StringDecrypt.java  StringDecryptDump.java
src/main/java/me/n1ar4/jar/obfuscator/transform/: ClassNameTransformer.java  DeleteInfoTransformer.java  FieldNameTransformer.java  JunkCodeTransformer.java  MainClassTransformer.java  MethodNameTransformer.java  ParameterTransformer.java  ReflectionTransformer.java  ResourceTransformer.java  StringArrayTransformer.java  StringTransformer.java  TransformerUtil.java  XORTransformer.java
src/main/java/me/n1ar4/jar/obfuscator/utils/: ByteUtil.java  BytecodeRemapUtil.java  BytecodeStringUtil.java  ColorUtil.java  DescUtil.java  DirUtil.java  FileUtil.java  FrameworkRuleUtil.java  IOUtils.java  JNIUtil.java  JunkUtil.java  NameUtil.java  OSUtil.java  PackageUtil.java  RandomUtil.java  UpdateChecker.java  VerUtil.java
src/main/java/me/n1ar4/jrandom/core/: JRandom.java
src/main/java/me/n1ar4/log/: Log.java  LogLevel.java  LogManager.java  LogUtil.java  Logger.java  LoggingStream.java
src/main/resources/: README.md  builtin.map.txt  config.yaml  libdecrypter.dylib  libencryptor.dylib  thanks.txt
test/: README.md  config1.yaml  config2.yaml  config3.yaml  config4.yaml  config5.yaml  config6.yaml  config7.yaml  config9.yaml  test-001.yaml  test-01.yaml  test-02.yaml  test-03.yaml  test-all.yaml  test-char.yaml  test-junk.yaml  test-sb-01.yaml  test-sb-02.yaml  test-simple.yaml  test-string.yaml  test1.txt
